WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36390
[GTK] suppress (un)desired launcher output that can make layout test to fail with stderr
https://bugs.webkit.org/show_bug.cgi?id=36390
Summary
[GTK] suppress (un)desired launcher output that can make layout test to fail ...
Martin Robinson
Reported
2010-03-19 14:19:40 PDT
Very similar to:
https://bugs.webkit.org/show_bug.cgi?id=27215
The Totem plugin, in particular can cause spurious failures when it uses the GLib logger.
Attachments
Patch for this issue
(1.93 KB, patch)
2010-03-19 14:29 PDT
,
Martin Robinson
eric
: review-
mrobinson
: commit-queue-
Details
Formatted Diff
Diff
Patch for this issue (rev2)
(2.21 KB, patch)
2010-03-25 09:12 PDT
,
Martin Robinson
zecke
: review+
mrobinson
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-03-19 14:29:40 PDT
Created
attachment 51188
[details]
Patch for this issue
Eric Seidel (no email)
Comment 2
2010-03-25 00:51:49 PDT
Comment on
attachment 51188
[details]
Patch for this issue We need a comment in the code, otherwise the next person to look at this will have no clue what this is for.
Martin Robinson
Comment 3
2010-03-25 09:12:07 PDT
Created
attachment 51645
[details]
Patch for this issue (rev2) Sounds good. Update attached.
Holger Freyther
Comment 4
2010-03-28 19:39:15 PDT
Comment on
attachment 51645
[details]
Patch for this issue (rev2) Yes, this will work for the totem plugin. Some how my memory tells me we had a patch to run-webkit-test to filter out certain output but my memory seems to play tricks...
Martin Robinson
Comment 5
2010-03-29 21:04:52 PDT
Committed
r56760
: <
http://trac.webkit.org/changeset/56760
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug